minijinja/tests/snapshots/test_templates__vm@err_toplevel_break.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% break %}"
info: {}
input_file: minijinja/tests/inputs/err_toplevel_break.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "'break' must be placed inside a loop",
    name: "err_toplevel_break.txt",
    line: 1,
}

syntax error: 'break' must be placed inside a loop (in err_toplevel_break.txt:1)
--------------------------- err_toplevel_break.txt ----------------------------
   1 > {% break %}
     i    ^^^^^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
