minijinja/tests/snapshots/test_templates__vm@err_undefined_nested_attr.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ seq.whatever }}\n{{ seq.whatever.else }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: minijinja/tests/inputs/err_undefined_nested_attr.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`seq.whatever` is undefined",
    name: "err_undefined_nested_attr.txt",
    line: 2,
}

undefined value: `seq.whatever` is undefined (in err_undefined_nested_attr.txt:2)
------------------------ err_undefined_nested_attr.txt ------------------------
   1 | {{ seq.whatever }}
   2 > {{ seq.whatever.else }}
     i       ^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------
