minijinja/tests/snapshots/test_templates__vm@err_unexpected_character.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ foo @ }}"
info: {}
input_file: minijinja/tests/inputs/err_unexpected_character.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "unexpected character",
    name: "err_unexpected_character.txt",
    line: 1,
}

syntax error: unexpected character (in err_unexpected_character.txt:1)
------------------------ err_unexpected_character.txt -------------------------
   1 > {{ foo @ }}
     i        ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
