minijinja/tests/snapshots/test_templates__vm@err_unterminated_string.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ \"this string is missing a closing quote"
info: {}
input_file: minijinja/tests/inputs/err_unterminated_string.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "unexpected end of string",
    name: "err_unterminated_string.txt",
    line: 1,
}

syntax error: unexpected end of string (in err_unterminated_string.txt:1)
------------------------- err_unterminated_string.txt -------------------------
   1 > {{ "this string is missing a closing quote
     i                                           ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
