minijinja/tests/snapshots/test_templates__vm@escape.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{'\\'' ~ 'foo'}}\n{{'\\'' ~ x ~ '\\''}}\n{{\"\\'\" ~ x ~ '\\''}}\n{{\"\\'\" ~ x ~ '\\''}}\n{{\"\nhello world\"}}\n{{\"hello\nworld\"}}"
info:
  ctx:
    x: hello
input_file: minijinja/tests/inputs/escape.txt
---
'foo
'hello'
'hello'
'hello'

hello world
hello
world

