minijinja/tests/snapshots/test_templates__vm@escaping.html.snap
---
source: tests/test_templates.rs
expression: "&rendered"
input_file: tests/inputs/escaping.html

---
<h1>&lt;foo&gt;</h1>

=====

Template {
    name: "escaping.html",
    instructions: [
        00000 | EMIT_RAW (string "<h1>")   [<unknown>:1],
        00001 | LOOKUP (var "unsafe")   [<unknown>:1],
        00002 | EMIT   [<unknown>:1],
        00003 | EMIT_RAW (string "</h1>\n")   [<unknown>:1],
    ],
    blocks: {},
    initial_auto_escape: Html,
}
