minijinja/tests/snapshots/test_templates__vm@filter.txt.snap
---
source: minijinja/tests/test_templates.rs
expression: "&rendered"
input_file: minijinja/tests/inputs/filter.txt

---
FOO BAR BAZ
=====

Template {
    name: "filter.txt",
    instructions: [
        00000 | LOOKUP (var "value")  [line 1],
        00001 | BUILD_LIST (0 items),
        00002 | APPLY_FILTER (name "upper"),
        00003 | EMIT,
    ],
    blocks: {},
    initial_auto_escape: None,
}
